# mcsm-vita-port

./: CMakeLists.txt  coredump
cmake/: fix_fmodstudio_stub.cmake
docs/: fmod-link-analysis.md  render_backend_reversing.md  reverse_engineering_telltale_obb.md
docs/crash_reports/: 2026-04-04-prefetch-abort-fmod-memory-initialize.md  2026-04-05-boot-logo-hang-obb-resolution.md  2026-04-08-boot-logo-hang-permission-storage-path.md
extras/scripts/: check_fmod_symbols.py  map_render_funcs.py  scan_und_imports.sh
lib/falso_jni/: FalsoJNI_ImplBridge.c
lib/fios/: fios.c
lib/so_util/: so_util.c  so_util.h
references/sources/Into-The-Breach-Vita/: CMakeLists.txt  README.md
references/sources/Into-The-Breach-Vita/loader/: config.h  dialog.c  main.c  so_util.c
references/sources/gdash-psvita/: CMakeLists.txt  LICENSE  README.md
references/sources/gdash-psvita/extras/: cpuinfo  meminfo
references/sources/gdash-psvita/extras/scripts/: get_dump.sh
references/sources/gdash-psvita/lib/fios/: fios.c  fios.h
references/sources/gdash-psvita/lib/kubridge/: kubridge.h
references/sources/gdash-psvita/lib/libc_bridge/: CMakeLists.txt  libc_bridge.h  nids.yml
references/sources/gdash-psvita/lib/sha1/: sha1.h
references/sources/gdash-psvita/lib/so_util/: elf.h  so_util.c  so_util.h
references/sources/gdash-psvita/source/: dynlib.c  dynlib.h  falso_jni_impl.c  fmod_symbols.h  main.c  main.h  openssl_patch.c  openssl_patch.h  patch.c  patch.h
references/sources/gdash-psvita/source/reimpl/: _errno_bionic.h  _struct_converters.c  ctype_patch.c  env.c  env.h  errno.c  errno.h  io.c  io.h  ioctl.c  ioctl.h  log.c  log.h  mem.c  mem.h  pthr.c  pthr.h  sys.c  sys.h
references/sources/gdash-psvita/source/utils/: dialog.c  dialog.h  glutil.c  glutil.h  init.c  init.h  logger.c  logger.h  settings.c  settings.h  utils.c  utils.h
references/vitalibs/: eboot.bin.elf.sha256
references/vitalibs/sce_module/: libc.suprx.elf  libc.suprx.elf.sha256  libfios2.suprx.elf  libfios2.suprx.elf.sha256  libfmodstudio.suprx.elf  libult.suprx.elf  libult.suprx.elf.sha256
source/: android_shims.c  android_shims.h  dynlib.c  engine_bootstrap.c  engine_bootstrap.h  fmod_symbols.h  fmodpp_compat.cpp  java.c  main.c  patch.c  vitagl_shader_compat.c
source/reimpl/: asset_manager.cpp  asset_manager.h  controls.c  egl.c  egl.h  io.c  io.h  mem.c  mem.h  pthr.c  pthr.h  sys.c  sys.h
source/utils/: glutil.c  glutil.h  init.c  init.h  logger.c  logger.h
